--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@ spring:
   profiles:
     active: dev
 
+  elasticsearch:
+    rest:
+      connection-timeout: 60s
+      read-timeout: 60s
+
 server:
   error:
     include-message: always
