--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
     //-- mapStruct --//
     compile group: 'org.mapstruct', name: 'mapstruct', version: '1.3.1.Final'
@@ -34,7 +35,9 @@ dependencies {
     //-- apache commons lang --//
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
 
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
+    //-- swagger --//
+    compile group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 
 }
 
