--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,18 @@ services:
     networks:
       - elsticsearch-network
     restart: on-failure
+  kibana:
+    image: docker.elastic.co/kibana/kibana:6.8.12
+    container_name: kibana-for-elastic-search-demo
+    ports:
+      - "5601:5601"
+    links:
+      - es01:elasticsearch
+    depends_on:
+      - es01
+    networks:
+      - elsticsearch-network
+    restart: on-failure
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.0
     container_name: elasticsearch-for-springboot-app
@@ -35,6 +47,8 @@ services:
 
 volumes:
   esdata1:
+    driver: local
+  kibanadata1:
     driver: local
 
 networks:
