--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3'
 services:
   spring-boot:
     image: uday07/elastic-search-demo
-    container_name: springboot-app-for-elasticsearch
+    container_name: springboot-app-for-elastic-search-demo
     ports:
       - "8081:8081"
     environment:
-      - ELASTICSEARCH_CONNECTION_URL=elasticsearch-for-springboot-app:9200
+      - ELASTICSEARCH_CONNECTION_URL=elasticsearch-for-elastic-search-demo:9200
     depends_on:
-      - es01
+      - elasticsearch
     networks:
       - elsticsearch-network
     restart: on-failure
@@ -18,15 +18,18 @@ services:
     ports:
       - "5601:5601"
     links:
-      - es01:elasticsearch
+      - elasticsearch:elasticsearch
     depends_on:
-      - es01
+      - elasticsearch
     networks:
       - elsticsearch-network
     restart: on-failure
-  es01:
+  elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.9.0
-    container_name: elasticsearch-for-springboot-app
+    container_name: elasticsearch-for-elastic-search-demo
+    ports:
+      - 9300:9300
+      - 9200:9200
     environment:
       - node.name=elasticsearch
       - discovery.type=single-node
@@ -38,17 +41,13 @@ services:
        soft: -1
        hard: -1
     volumes:
-      - esdata1:/usr/share/elasticsearch/data
-    ports:
-      - 9300:9300
-      - 9200:9200
+      - elasticsearch-data:/usr/share/elasticsearch/data
     networks:
       - elsticsearch-network
+    restart: on-failure
 
 volumes:
-  esdata1:
-    driver: local
-  kibanadata1:
+  elasticsearch-data:
     driver: local
 
 networks:
